--- a/style.css
+++ b/style.css
@@ -35,11 +35,10 @@ li {
 }
 .mobile-nav {
 	z-index:998;
-	display: block;
 	position:absolute;
-	width:fit-content;
 	margin:1rem 0 1rem 4rem;
 	background:transparent;
+	display: flex;
 }
 .mobile-nav > ul {
 	background:white;
@@ -48,11 +47,10 @@ li {
 	padding:0.5rem 0;
 	display: flex;
 	flex-direction: column;
-	width:fit-content;
 }
 	.mobile-nav .nav-item {
-		display: inline-block;
-		text-align:center;
+		display: block;
+		text-align:left;
 		padding:0;
 	}
 	.mobile-nav .nav-item a {
@@ -285,7 +283,9 @@ nav ul {
 	color:#ff914d;
 	font-size:24px;
 }
-
+.slick-prev, .slick-next {
+	z-index:999;
+}
 
 
 
