--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ nav ul {
 	}
 
 .container-out {
-	padding:1rem 5rem;
+	padding:1rem 5rem 2rem 5rem;
 }
 .container {
 	max-width:60rem;
@@ -158,19 +158,7 @@ nav ul {
 }
 
 
-#footer {
-	width: 100%;
-	margin-top:2rem;
-	text-align: center;
-	background: #FFEFE5;
-	padding:1rem 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-#footer img {
-	width:6rem;
-}
+
 
 .row {
 	display: flex;
@@ -208,6 +196,20 @@ nav ul {
 		padding-left:4rem;
 		margin:0;
 	}
+
+
+.qa-box {
+	margin:2rem 0;
+	padding-left:2rem;
+	border-left:5px solid #ff914d;
+}
+.qa-box .question {
+	font-weight:bold;
+	margin-bottom:0.5em;
+}
+.qa-box p {
+	margin:0;
+}
 
 
 .table {
@@ -278,6 +280,20 @@ nav ul {
 	text-decoration: none;
 }
 
+
+#footer {
+	width: 100%;
+	margin-top:2rem;
+	text-align: center;
+	background: #FFEFE5;
+	padding:1rem 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+#footer img {
+	width:6rem;
+}
 
 .slick-next:before, .slick-prev:before {
 	color:#ff914d;
@@ -356,6 +372,10 @@ nav ul {
 	}
 	#land .button {
 		margin:0;
+	}
+
+	.qa-box {
+		padding-left:1rem;
 	}
 
 
