--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ li {
 	margin:1rem 0 1rem 4rem;
 	background:transparent;
 	display: flex;
+	width:auto;
 }
 .mobile-nav > ul {
 	background:white;
