--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ nav ul {
 		padding-top:1rem;
 		padding-bottom:2rem;
 	}
+	#land .button {
+		margin-top:0;
+		margin-right:1rem;
+	}
 	#land h1 {
 		font-weight: bold;
 		margin:0;
@@ -372,7 +376,7 @@ nav ul {
 		margin-top:0.2em;
 	}
 	#land .button {
-		margin:0;
+		margin-top:0;
 	}
 
 	.qa-box {
